--- a/modules/css/BookingDetails.module.css
+++ b/modules/css/BookingDetails.module.css
@@ -5,6 +5,7 @@
 .left-col-video{
     border-radius: 12px;
     border: 2px solid #C7E8ED;
+    margin-bottom: 28px;
 }
 .left-column{
     margin-right: 14px;
@@ -13,7 +14,7 @@
     margin-left: 14px;
 }
 .left-col-1{
-    margin-top: 28px;
+    
     border-radius: 12px;
 }
 .left-col-2{
@@ -82,6 +83,7 @@
     height: 56px;
     object-fit: cover;
     margin-right: 18px;
+    border-radius: 100px;
 }
 .icons-wrapper{
     gap: 10px;
