--- a/modules/css/subscription.module.css
+++ b/modules/css/subscription.module.css
@@ -42,6 +42,11 @@
     padding-bottom: 28px;
     border-bottom: 2px dashed #3085F4;
 }
+.discount-text-absolute{
+    transform: rotate(-15deg);
+    top:18px;
+    left: 26px;
+}
 .plan-summary-form label{
     font-weight: 600;
     font-size: clamp(0.875rem, 0.8500rem + 0.1250vw, 1rem);
