--- a/modules/css/SideBar.module.css
+++ b/modules/css/SideBar.module.css
@@ -112,7 +112,6 @@
        
     } 
 }
-
 .expand{
     min-width:clamp(14.375rem, 13.3375rem + 5.1875vw, 19.5625rem);
     position: sticky;
@@ -121,8 +120,6 @@
     background-color: var(--grey6);
     padding: clamp(1.25rem, 1.0000rem + 1.2500vw, 2.5rem) clamp(0.8125rem, 0.4375rem + 1.8750vw, 2.6875rem) 0px clamp(0.625rem, 0.5000rem + 0.6250vw, 1.25rem);
 }
-
-
 /* Header css */
 .haeder-height{
     height: 52px;
@@ -143,7 +140,6 @@
 .header-noti img{
     width:clamp(0.75rem, 0.6058rem + 0.6410vw, 1.375rem);
     height:clamp(0.9375rem, 0.7933rem + 0.6410vw, 1.5625rem);
-
 }
 .noti-profile-wrapper{
     gap:16px;
@@ -164,6 +160,7 @@
     padding: 11px 7px 9px 7px;
 }
 .profile-dropdown{
+    z-index: 100;
     padding: 20px;
     width: 400px;
     background: #FFFFFF;
@@ -194,11 +191,11 @@
     height: 24px;
   }
   
-  .rectangle input {
+.rectangle input {
     display: none;
-  }
+}
   
-  .toggle {
+.toggle {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -209,9 +206,9 @@
     border-radius: 500px;
     background-color: var(--grey2);
     border:1px solid var(--grey2);
-  }
+}
   
-  .toggle:before {
+.toggle:before {
     position: absolute;
     content: "";
     height: 18px;
@@ -221,22 +218,21 @@
     transition: .4s;
     border-radius: 500px;
     background-color: var(--white);
-  }
-  
-  .rectangle input:checked + .toggle:before{
+}
+.rectangle input:checked + .toggle:before{
     background-color: var(--white);
     transform: translateX(26px);
-  }
-  .rectangle input:checked + .toggle{
+}
+.rectangle input:checked + .toggle{
     background-color: var(--primary);
     border:1px solid var(--primary);
-  }
+}
 
-  .edit-profile-wrapper{
+.edit-profile-wrapper{
     padding: 12px 0px;
     background: var(--white);
     border-bottom: 1px solid var(--grey5);
-  }
-  .user-icon-text{
+}
+.user-icon-text{
     gap:14px;
-  }
+}
