--- a/styles/global.css
+++ b/styles/global.css
@@ -118,6 +118,9 @@ body {
   color: var(--red);
 }
 /* background colors */
+.bg-red{
+  background-color: var(--red);
+}
 .bg-primary{
   background-color: var(--primary);
 }
