--- a/modules/css/AddNewPatient.module.css
+++ b/modules/css/AddNewPatient.module.css
@@ -165,3 +165,22 @@
         width: 100%;
     }
 }
+
+.field-with-dropdown{
+    margin-top: 20px;
+    gap:4px;
+}
+.unit-dropdown{
+    background: var(--grey6);
+    border-radius: 8px;
+    border: none;
+    font-size: clamp(0.875rem, 0.8500rem + 0.1250vw, 1rem);
+}
+.unit-dropdown input{
+    border: none;
+    background-color: transparent;
+    padding: 0px 20px;
+}
+.unit-dropdown input:focus{
+    outline: none;
+}
