--- a/modules/css/DoctorChat.module.css
+++ b/modules/css/DoctorChat.module.css
@@ -45,4 +45,35 @@
     background: #FFFFFF;
     border: 2px solid #EEEEF7;
     border-radius: 0px 16px 16px 0px;
+    padding: 20px 60px 36px 32px;
+}
+.chat-person-img{
+    width: 56px;
+    height: 56px;
+    border-radius: 100px;
+}
+.chat-popup-r{
+    width: 346px;
+    border-radius: 2px 20px 20px 20px;
+    padding: 12px 16px;
+}
+.chat-popup-s{
+    width: 346px;
+    padding: 12px 16px;
+    border-radius: 20px 2px 20px 20px;
+}
+.message-area{
+    background: #EEEEF7;
+    border-radius: 100px;
+    padding: 12px 16px;
+}
+.message-area textarea{
+    width: 100%;
+    background: transparent;
+    border: none;
+    resize: none;
+    font-family: inherit;
+}
+.message-area textarea:focus{
+    outline: none;
 }
