--- a/modules/css/HelpAndSupport.module.css
+++ b/modules/css/HelpAndSupport.module.css
@@ -1,3 +1,63 @@
 .help-and-support{
     padding: 60px 40px 0px 40px;
+    gap: 100px;
+}
+.search-bar-wrapper{
+    background: var(--grey6);
+    border: 1.5px solid var(--grey5);
+    border-radius: 8px;
+}
+.search-bar-wrapper svg{
+    padding: 15px 12px 15px 15px;
+}
+.search-bar-wrapper input{
+    background: transparent;
+    border: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--grey2);
+    outline: none;
+}
+.search-bar-wrapper input::placeholder{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--grey2);
+}
+
+.faq-accordian-item-wrapper{
+    padding-bottom: 16px;
+    border-bottom:2px solid var(--grey4);
+}
+.accordian-content-wrapper{
+    margin-top: 29px;
+    margin-bottom: 30px;
+}
+.query-box{
+    padding: 24px;
+    background: var(--blue1);
+    border-radius: 12px;
+}
+.message-btn{
+    padding: 12px 24px 12px 20px;
+    background: var(--dark-blue);
+    border-radius: 100px;
+    width: 130px;
+}
+
+/* terms and conditions */
+.tc-wrapper{
+    padding: 60px 40px 0px 40px;
+    gap: 58px;
+}
+.sidebar-wrapper{
+    border-right: 1px solid #D3D3D3;
+}
+.active{
+    color: var(--primary); 
 }
