--- a/modules/css/SideBar.module.css
+++ b/modules/css/SideBar.module.css
@@ -204,8 +204,9 @@
     bottom: 0;
     transition: .4s;
     border-radius: 500px;
-    background-color: var(--grey2);
-    border:1px solid var(--grey2);
+    background-color: var(--primary);
+    border:1px solid var(--primary);
+    
 }
   
 .toggle:before {
@@ -213,7 +214,7 @@
     content: "";
     height: 18px;
     width: 18px;
-    left: 3px;
+    right: 3px;
     top: 2px;
     transition: .4s;
     border-radius: 500px;
@@ -221,11 +222,11 @@
 }
 .rectangle input:checked + .toggle:before{
     background-color: var(--white);
-    transform: translateX(26px);
+    transform: translate(-26px);
 }
 .rectangle input:checked + .toggle{
-    background-color: var(--primary);
-    border:1px solid var(--primary);
+    background-color: var(--grey2);
+    border:1px solid var(--grey2);
 }
 
 .edit-profile-wrapper{
