--- a/modules/css/profile.module.css
+++ b/modules/css/profile.module.css
@@ -414,8 +414,18 @@
     right: 0;
     opacity: 0;
 }
-.uploaded-photos{
+.uploaded-photos img{
     width: 144px;
     height: 108px;
     border-radius: 4px;
+    object-fit: contain;
+}
+.delete-slot{
+    border-radius: 100px;
+    width: 48px;
+    height: 48px;
+    background: #FFEAE8;
+}
+.delete-slot img{
+    padding: 13px 15px;
 }
